# mcp-ops

./: README.md  pyproject.toml
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: BMC.md  PRD.md  REQUIREMENTS.md  ROADMAP.md  STORIES.md  TECH_SPEC.md
src/: governance.py  mcp_ops.py  mcp_server.py  server.py
tests/: test_governance.py  test_mcp_ops.py  test_mcp_server.py  test_server.py
